--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -1,4 +1,4 @@
-header{
+/* header{
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
@@ -8,6 +8,4 @@ header{
     color: black;
     width: 900px;
     padding: 24px 0;
-}
-
-header.
+} */
