--- a/src/App.css
+++ b/src/App.css
@@ -1,46 +1,32 @@
+@import url('https://fonts.googleapis.com/css2?family=Kanit:wght@600&family=Karla:ital,wght@0,400;0,500;1,400&display=swap');
+
+:root{
+
+  /*===== Couleurs ====*/
+  --primary: #025892;/*bleu du logo*/
+  --primaryLight: #267114;
+  --secondary: #008787;/*bleu-vert du logo*/
+  --red: #DB162F;
+  --validation: #049D2F;/*pour les boutons de validation*/
+  --grey: #EBEBEB;/*header et footer*/
+  --white: #FFFFFF;/*texte*/
+  --black: #000000;/*texte*/
+
+  /* ===== Fonts ==== */
+
+  --body: 'Karla', sans-serif;
+  --header: 'Kanit', sans-serif;
+}
+
 #root {
   max-width: 1280px;
-  margin: 0 auto;
-  padding: 2rem;
-  text-align: center;
+  margin: auto;
 }
 
-.logo {
-  height: 6em;
-  padding: 1.5em;
-  will-change: filter;
-  transition: filter 300ms;
-}
-.logo:hover {
-  filter: drop-shadow(0 0 2em #646cffaa);
-}
-.logo.react:hover {
-  filter: drop-shadow(0 0 2em #61dafbaa);
+h1{
+  font-family: var(--header);
 }
 
-@keyframes logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  a:nth-of-type(2) .logo {
-    animation: logo-spin infinite 20s linear;
-  }
-}
-
-.card {
-  padding: 2em;
-}
-
-.read-the-docs {
-  color: #888;
-}
-
-.test{
-  padding: 20px 200px;
+p{
+  font-family: var(--body);
 }
