--- a/src/App.css
+++ b/src/App.css
@@ -4,7 +4,7 @@
 
   /*===== Couleurs ====*/
   --primary: #025892;/*bleu du logo*/
-  --primaryLight: #267114;
+  --primaryLight: #2671A4;
   --secondary: #008787;/*bleu-vert du logo*/
   --red: #DB162F;
   --validation: #049D2F;/*pour les boutons de validation*/
@@ -21,6 +21,12 @@
 #root {
   max-width: 1280px;
   margin: auto;
+}
+
+*{
+  box-sizing: border-box;
+  font-family: var(--body);
+  font-weight: 400;
 }
 
 h1{
