--- a/src/components/CardEntreprise/CardEntreprise.css
+++ b/src/components/CardEntreprise/CardEntreprise.css
@@ -3,7 +3,6 @@
     width: 20px;
     height: 20px;
     border-radius: 50%;
-    margin-left: 10px;
   }
   
   .pastille-verte {
@@ -12,6 +11,13 @@
   
   .pastille-rouge {
     background-color: var(--red);
+  }
+
+  .pastille-edit-frame{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 16px;
   }
 
   .companies-card-frame{
@@ -27,8 +33,8 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    max-width: 600px;
     color: var(--white);
+    width: 400px;
 
 }
 
@@ -48,9 +54,9 @@
     justify-content: space-between;
     align-items: center;
     background-color: var(--primary);
-    border-radius: 8px 8px 0px 0px;
-    width: 100%;
+    border-radius: 8px;
     padding: 16px 24px;
+    width: 100%;
 }
 
 .top-left-card{
@@ -65,9 +71,9 @@
     flex-direction: column;
     gap: 24px;
     background-color: var(--primaryLight);
-    width: 100%;
     border-radius: 0px 0px 8px 8px;
     padding: 24px 32px;
+    width: 100%;
 }
 
 .bottom-companie-card div{
