--- a/src/components/CardEntreprise/CardEntreprise.css
+++ b/src/components/CardEntreprise/CardEntreprise.css
@@ -3,30 +3,30 @@
     width: 20px;
     height: 20px;
     border-radius: 50%;
-  }
-  
-  .pastille-verte {
-    background-color: var(--validation);
-  }
-  
-  .pastille-rouge {
-    background-color: var(--red);
-  }
+}
 
-  .pastille-edit-frame{
+.pastille-verte {
+    background-color: var(--validation);
+}
+
+.pastille-rouge {
+    background-color: var(--red);
+}
+
+.pastille-edit-frame{
     display: flex;
     flex-direction: column;
     align-items: center;
     gap: 16px;
-  }
+}
 
-  .companies-card-frame{
+.companies-card-frame{
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
     gap: 24px;
-  }
+}
 
 .companie-card{
     display: flex;
@@ -45,8 +45,6 @@
     color: var(--white);
     text-decoration: none;
 }
-
-
 
 .top-companie-card{
     display: flex;
@@ -81,4 +79,23 @@
     flex-direction: row;
     gap: 24px;
     align-items: center;
+}
+
+.card-open{
+    cursor: pointer;
+}
+
+.card-selection{
+    /* appearance: none; */
+    cursor: pointer;
+    width: 28px;
+    height: 28px;
+    padding: 8px;
+    border-radius: 4px;
+    background-color: var(--white);
+}
+
+.card-selection:checked{
+    border: 2px solid var(--grey);
+    background-color: var(--secondary);
 }
