--- a/src/components/CardEntreprise/CardEntreprise.css
+++ b/src/components/CardEntreprise/CardEntreprise.css
@@ -57,6 +57,9 @@
     padding: 16px 24px;
     width: 100%;
 }
+.top-companie-card-open {
+    border-radius: 8px 8px 0px 0px;
+}
 
 .top-left-card{
     display: flex;
